changing media queries

--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,7 @@ footer{
 @media (max-width: 760px){
     #page{
         height: 100%;
+        width: 100%;
     }
     #top{
         height: 100%;
